# my-tiny-llm

./: README.md  pyproject.toml
src/my_tiny_llm/: __init__.py  cli.py
src/my_tiny_llm/checkpoints/: __init__.py  loader.py
src/my_tiny_llm/core/: __init__.py  attention.py  ops.py
src/my_tiny_llm/inference/: __init__.py  generation.py  sampling.py
src/my_tiny_llm/layers/: __init__.py  normalization.py  rope.py
src/my_tiny_llm/models/: __init__.py  config.py  qwen3.py
tests/integration/: test_checkpoints.py  test_qwen3.py
tests/unit/: test_attention.py  test_checkpoint_files.py  test_cli.py  test_config.py  test_core.py  test_generation.py  test_layers.py  test_models.py  test_ops.py  test_sampling.py
